@@ -11,25 +11,24 @@ use File::Spec;
 
 =head1 SYNOPSIS
 
+From your Perl script:
+
  use Alien::nasm ();
  use Env qw( @PATH );
  
  unshift @ENV, Alien::nasm->bin_dir;
  system 'nasm', ...;
 
-Or with L<Alien::Build::ModuleBuild>:
+From L<alienfile>:
 
- use Alien::Base::ModuleBuild;
- Alien::Base::ModuleBuild->new(
-   ...
-   alien_bin_requires => {
-     'Alien::nasm' => '0.11',
-   },
-   alien_build_commands => {
-     "%{nasm} ...",
-   },
-   ...
- )->create_build_script;
+ use alienfile;
+ 
+ share {
+   requires 'Alien::nasm';
+   build [
+     'nasm ...',
+   ];
+ };
 
 =head1 DESCRIPTION
 
@@ -78,6 +77,9 @@ sub alien_helper
 1;
 
 =head1 CAVEATS
+
+On Windows for share builds, we install binaries.  This avoids needing
+to depend on L<Alien::MSYS>.
 
 This version of L<Alien::nasm> adds nasm to your path, if it isn't
 already there when you use it, like this:
