@@ -1,7 +1,0 @@
-use strict;
-use warnings;
-use Test::More;
-
-require_ok 'Alien::nasm';
-
-done_testing;
