@@ -2,6 +2,7 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
   - For MSWin32 download binaries of nasm to avoid MSYS
+  - Ensure both nasm and ndisasm are available
 
 0.18      2017-03-01 19:10:26 +1100
   - Remove dep on Alien::Base2.  Use Alien::Base directly.
